# hierarchical_nu

./: .gitattributes  .gitignore  CITATION.cff  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  test_software.ipynb
.github/workflows/: docs.yml  python-package.yml  tests.yml
catalogs/: BAT_105m_catalog_07jul2019.txt  fits_to_pandas_3fhl.ipynb
dev/: testing_simple_model.ipynb
dev/arrival_direction_model/: testing_simple_model.ipynb
dev/cascade_detector_model/: check_cascade_aeff.ipynb  generate_detector_model_files.ipynb
dev/cascade_model/: TODO  cascade_model.py  cascade_model_old.py  example.ipynb
dev/hypothesis_testing/: helpers.py  lib.py  test.ipynb
dev/joint_model/: joint_model_cascades.ipynb  joint_model_cascades.py
dev/population_model/: population_model.ipynb  population_model.py
dev/spline_dev/: Untitled.ipynb  bspline_ev.py  clean_snippet.ipynb  custom_spline_snippets.ipynb  plot.py
dev/stan/: test_nu_model.stan  test_nu_sim.stan
dev/statistical_model/: 2DAeff.ipynb  joint_model_cascades.ipynb
docker/: Dockerfile  README.md
docker/hierarchical-nu/: Dockerfile
docker/icecube-tools/: Dockerfile
docs/: conf.py  index.rst
docs/notebooks/: 01_simulate_and_fit.ipynb  notebooks.rst
examples/: 01_simulate_and_fit.md  02_txs.ipynb  02_txs.md  03_population.ipynb  03_population.md  04_spectral_models.ipynb  04_spectral_models.md  SBG_apj435974t1_ascii.txt  bright_infrared_galaxies.tsv  cascades_implmentation.ipynb  detection_prob.md  energy_only.md  fits_to_pandas_3fhl.ipynb  logparabola.md  low_energy.md  low_energy_threshold.md  mceq.ipynb  population.md  rejection_sampling.md  simulate_and_fit.md  software_tutorial.ipynb  txs.md
examples/cascade_detector_model/: check_cascade_aeff.ipynb  generate_detector_model_files.ipynb  generate_detector_model_files.md
examples/config/: config.md  hnu_config.yml
examples/elaborate_tests/: README.md  pgamma.md  test_bg_llh.py
examples/output/: test_dm.stan  test_pop_synth.yaml
examples/r2021/: r2021.md
examples/simulation_study/: README.md  array_run.sh  check_results.ipynb  check_results.md  initialise.py  parallel_run.sh  simulation_study.py
examples/stan_files/: atmo_gen  detector_model_test_functions.stan  model_code.hpp  model_code.stan  sim_code.stan  sim_code_generatedquantities.stan  sim_code_transformeddata.stan  sim_test_data.stan  sim_test_generatedquantities.stan  test_fit.stan
examples/test_notebooks/: cascades_implmentation.md  check_aeff_impl.ipynb  detector_model_implmentation.ipynb  detector_model_implmentation.md  (+1 more)
hierarchical_nu/: _version.py  config.py  events.py  fit.py  joint_model_cascades.py  model_check.py  precomputation.py  priors.py  simulation.py  stan_interface.py
ideas/: ideas.md
sandbox/: sampling_bias.ipynb
software/: CascadesAngularResolution.csv  Precomputation.py  aeff_check.ipynb  cache.py  cascades_implmentation.ipynb  check_cascade_aeff.ipynb  debug_fit.ipynb  detector_model.py  eventlist.py  expression.py  mceq.ipynb  operator_expression.py  parameterizations.py  profile.stats  pymc_generator.py  software_tutorial.ipynb  stan_generator.py  test_codegen.ipynb  test_codegen_cascades.ipynb  test_software.ipynb  testing.ipynb
tests/: conftest.py  test_cascades_codegen.py  test_configuration.py  test_event_merging.md  test_event_merging.py  test_events.py  test_flux_conv.py  test_forced_n.py  test_lifetime.py  test_logparabola.py  test_model_check.py  test_multithreading.py  test_nex.py  test_northern_tracks_codegen.py  test_nothern_tracks_codegen.py  test_pgamma.py  test_precomputation.py  test_r2021_codegen.py  test_roi.py  test_source_sampling.py  test_stan.py  test_stan_interface.py
(+739 files in other folders)
