[metadata]
name = hierarchical_nu
description = A Bayesian hierarchical model for source-nu associations
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/cescalara/hierarchical_nu
author_email = capel.francesca@gmail.com
author = Francesca Capel
requires_python = >=3.0

project_urls =
    Bug Tracker = https://github.com/cescalara/hierarchical_nu/issues
    Source Code = https://github.com/cescalara/hierarchical_nu

[options]
packages = find:
install_requires =
    crflux
    cmdstanpy @ git+https://github.com/stan-dev/cmdstanpy@5ed096e99927eef92ad89629d2d6d0c2c6d86446
    pandas
    ligo.skymap
    arviz
    corner
    numpy
    scipy
    h5py
    matplotlib
    astropy
    omegaconf
    MCEq
    jupytext
    joblib
    
tests_require =
    pytest

[versioneer]
VCS=git
style=pep440
versionfile_source=hierarchical_nu/_version.py
versionfile_build=hierarchical_nu/_version.py
tag_prefix=v
parentdir_prefix=hierarchical_nu-