[metadata]
name = hierarchical_nu
description = A Bayesian hierarchical model for source-nu associations
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/cescalara/hierarchical_nu
author_email = capel.francesca@gmail.com
author = Francesca Capel
requires_python = >=3.0

project_urls =
    Bug Tracker = https://github.com/cescalara/hierarchical_nu/issues
    Source Code = https://github.com/cescalara/hierarchical_nu

[options]
packages = find:
install_requires =
    crflux
    cmdstanpy >= 1.0.1, <1.2
    pandas
    ligo.skymap
    arviz
    corner
    numpy
    scipy == 1.12
    h5py
    matplotlib
    astropy
    omegaconf <= 2.1.1
    MCEq
    jupytext
    joblib
    iminuit
    tqdm_joblib
    icecube_tools @ git+https://github.com/cescalara/icecube_tools.git@814174f457eb887816388ab0e70dabbe363ca65c
tests_require =
    pytest
    pytest-cov

[versioneer]
VCS=git
style=pep440
versionfile_source=hierarchical_nu/_version.py
versionfile_build=hierarchical_nu/_version.py
tag_prefix=v
parentdir_prefix=hierarchical_nu-
